Squishy avatars on application list fixed.

--- a/src/scss/pages/_dashboard.scss
+++ b/src/scss/pages/_dashboard.scss
@@ -204,7 +204,7 @@ $icon-size: 40px;
             }
 
             &_details {
-              width: 100%;
+              width: calc(100% - 58px);
               margin-left: 0;
               overflow: visible;
             }
